--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/lodash": "^4.14.123",
+    "lodash": "^4.17.11",
     "mobx": "^5.9.0",
     "react": "^16.8.4",
+    "react-dnd": "^7.3.2",
+    "react-dnd-html5-backend": "^7.2.0",
     "react-dom": "^16.8.4",
     "react-scripts-ts": "3.1.0"
   },
