--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
+    "build": "react-scripts-ts build && rm -rf ../kyumoon.github.io/shopping-cart/* && mv ./build/* ../kyumoon.github.io/shopping-cart",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
@@ -24,5 +24,6 @@
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
     "typescript": "^3.3.3333"
-  }
+  },
+  "homepage": "."
 }
